--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ul data-attr="gallery" class="gallery"></ul>
     <div class="modal close"></div>
     <div class="close-button close"></div>
+    <div class="left-button close"></div>
+    <div class="right-button close"></div>
 
     <script src="./js/script-01.js" type="module"></script>
   </body>
