--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Boyadzhi`s gallary</title>
+    <title>Boyadzhi`s gallery</title>
   </head>
   <body>
-    <ul data-attr="gallery" class="gallery"></ul>
+    <ul data-attr="gallery" class="gallery js-gallery"></ul>
     <div class="modal close"></div>
     <div class="close-button close"></div>
     <div class="left-button close"></div>
