--- a/index.html
+++ b/index.html
@@ -3,16 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Boyadzhi`s gallery</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Homework 8</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <ul data-attr="gallery" class="gallery js-gallery"></ul>
-    <div class="modal close"></div>
-    <div class="close-button close"></div>
-    <div class="left-button close"></div>
-    <div class="right-button close"></div>
 
+  <body>
+    <!-- В этот список добавляй элементы галереи -->
+    <ul class="gallery js-gallery"></ul>
+
+    <!--
+      Модальное окно для полноразмерного изображения
+      Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
+    -->
+    <div class="lightbox js-lightbox">
+      <div class="lightbox__overlay"></div>
+
+      <!-- <div class="lightbox__content">
+        <img class="lightbox__image" src="" alt="" />
+      </div> -->
+
+      <button
+        type="button"
+        class="lightbox__button"
+        data-action="close-lightbox"
+      ></button>
+
+      <button
+        type="button"
+        class="lightbox__button right-button"
+        data-action="right-button"
+      ></button>
+
+      <button
+        type="button"
+        class="lightbox__button left-button"
+        data-action="left-button"
+      ></button>
+    </div>
+
+    <!-- <script src="gallery-items.js" type="module"></script> -->
     <script src="./js/script-01.js" type="module"></script>
   </body>
 </html>
